--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "raichu",
-  "version": "0.6.1",
+  "version": "0.7.0",
   "description": "",
   "main": "dist/server",
   "scripts": {
@@ -18,26 +18,26 @@
     "checksum": "^0.1.1",
     "compressible": "^2.0.6",
     "content-type": "^1.0.1",
-    "immutable": "^3.7.5",
+    "immutable": "^3.8.1",
     "jsonwebtoken": "^5.4.1",
     "jws": "^3.1.0",
-    "lodash.assign": "^3.2.0",
-    "lodash.find": "^3.2.1",
-    "lodash.isequal": "^3.0.4",
-    "lodash.isplainobject": "^3.2.0",
-    "lodash.merge": "^3.3.2",
+    "lodash.assign": "^4.0.8",
+    "lodash.find": "^4.3.0",
+    "lodash.isequal": "^4.1.4",
+    "lodash.isplainobject": "^4.0.4",
+    "lodash.merge": "^4.3.5",
     "mime": "^1.3.4",
-    "moment": "^2.10.6",
+    "moment": "^2.13.0",
     "path-to-regexp": "^1.2.1",
     "raw-body": "^2.1.4",
-    "react": "^0.14.3",
     "type-is": "^1.6.9",
     "urijs": "^1.17.0",
-    "ws": "^0.8.0",
+    "ws": "^1.1.0",
     "zxcvbn": "^4.1.1"
   },
   "devDependencies": {
-    "arceus": "^0.4.2",
+    "arceus": "^0.5.0",
+    "babel-polyfill": "^6.7.4",
     "gulp": "^3.9.0"
   }
 }
