--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "raichu",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "description": "",
   "main": "dist/server",
   "scripts": {
@@ -36,8 +36,11 @@
     "zxcvbn": "^4.1.1"
   },
   "devDependencies": {
-    "arceus": "^0.5.1",
+    "arceus": "^0.5.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
     "gulp": "^3.9.0"
   }
 }
